--- a/paq_Express/package.json
+++ b/paq_Express/package.json
@@ -18,6 +18,7 @@
   "author": "Bryan Mendoza",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jade": "^1.11.0"
   }
 }
