--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongoose": "^5.0.1"
   },
   "devDependencies": {},
   "scripts": {
